--- a/src/scss/blocks/latest-posts.scss
+++ b/src/scss/blocks/latest-posts.scss
@@ -33,6 +33,7 @@ section.wp-block-reqruitment-task-latest-posts {
                         line-height: 100%; /* 20px */
                         text-decoration: underline;
                         transition: .2s ease;
+                        margin: 0;
                     }
                     svg {
                         transform: translateX(0);
@@ -172,6 +173,12 @@ section.wp-block-reqruitment-task-latest-posts {
                         z-index: 1;
                         mix-blend-mode: multiply;
                     }
+                }
+                .details {
+                    height: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
                 }
                 a {
                     padding: 30px 30px 0;
