--- a/src/scss/blocks/latest-posts.scss
+++ b/src/scss/blocks/latest-posts.scss
@@ -18,6 +18,9 @@ section.wp-block-reqruitment-task-latest-posts {
                 flex-wrap: nowrap;
                 align-items: center;
                 gap: 19px;
+                @media screen and (max-width: 1024px) {
+                    padding: 0 0 15px;
+                }
                 a {
                     display: flex;
                     flex-direction: row;
@@ -100,54 +103,14 @@ section.wp-block-reqruitment-task-latest-posts {
                     }
                     .details {
                         flex: 2;
-                        display: flex;
-                        flex-direction: column;
-                        justify-content: space-between;
                         @media screen and (max-width: 580px) { 
                             justify-content: flex-start;
                             flex:initial
                         }
-                        .featured-post {
-                            padding: 65px 65px 31px;
-                            display: flex;
-                            flex-direction: row;
-                            flex-wrap: nowrap;
-                            gap: 8px;
+                        .details-contents {
+                            padding: 65px 65px 19px;
                             @media screen and (max-width: 580px) { 
-                                padding: 30px 30px 18px;
-                            }
-                            span {
-                                color: $red;
-                                font-size: 14px;
-                                line-height: 100%; /* 14px */
-                                letter-spacing: 1px;
-                            }
-                        }
-                        a {
-                            padding: 0 65px;
-                            display: block;
-                            @media screen and (max-width: 580px) { 
-                                padding: 0 30px;
-                            }
-                            &.read-more {
-                                padding: 15px 30px;
-                                background: #22B4AB;
-                                color: #FFF;
-                                font-size: 18px;
-                                font-style: normal;
-                                font-weight: 700;
-                                line-height: 28px; /* 155.556% */
-                                opacity: 0;
-                                transition: .2s ease-in-out;
-                                @media screen and (max-width: 580px) { 
-                                    opacity: 1;
-                                }
-                            }
-                        }
-                        p {
-                            padding: 0 65px 19px;
-                            @media screen and (max-width: 580px) { 
-                                padding: 0 30px 18px;
+                            padding: 30px 30px 19px;
                             }
                         }
                     }
@@ -179,9 +142,28 @@ section.wp-block-reqruitment-task-latest-posts {
                     display: flex;
                     flex-direction: column;
                     justify-content: space-between;
+                    .details-contents {
+                        padding: 30px 30px 19px;
+                        .featured-post {
+                            padding: 0 0 31px;
+                            display: flex;
+                            flex-direction: row;
+                            flex-wrap: nowrap;
+                            gap: 8px;
+                            span {
+                                color: $red;
+                                font-size: 14px;
+                                line-height: 100%; /* 14px */
+                                letter-spacing: 1px;
+                            }
+                        }
+                        p {
+                            padding: 0;
+                        }
+                    }
                 }
                 a {
-                    padding: 30px 30px 0;
+                    padding: 0;
                     display: block;
                     &.read-more {
                         padding: 15px 30px;
@@ -197,9 +179,9 @@ section.wp-block-reqruitment-task-latest-posts {
                             opacity: 1;
                         }
                     }
-                }
-                p {
-                    padding: 0 30px 19px;
+                    h3 {
+                        margin: 0;
+                    }
                 }
                 &:hover {
                     box-shadow: 0 6px 40px rgba(0, 0, 0, 0.1);
